fix: Fix page layout and z-index handling, correctly display asset-list on Dashboard page

--- a/src/modules/application/components/layouts/layoutRoot/layoutRoot.css
+++ b/src/modules/application/components/layouts/layoutRoot/layoutRoot.css
@@ -1,3 +1,11 @@
 :root {
   --ods-avatar-container-position: relative;
+
+  --ods-dialog-overlay-z-index: 20;
+  --ods-dialog-alert-overlay-z-index: 20;
+
+  --ods-dialog-content-z-index: 30;
+  --ods-dialog-alert-content-z-index: 30;
+
+  --ods-dropdown-container-content-z-index: 40;
 }
